# django-polls-

./: MANIFEST.in  README.rst  setup.cfg
django_polls.egg-info/: PKG-INFO  SOURCES.txt
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html
