[metadata]

name = django-polls 
version = 0.1
description = A django app to conduct web-based polls. 
long_description = file: README.rst
url = https://www.example.com/
author = Allen
author_email = allenagozie@gmail.com
license = BSD-3-Clause
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI approved :: BSD License
	Operating System :: OS Independent 
	Programming Language :: Python :: 3.8 
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true 
packages = find:
python_requires = >=3.6
install_requires = Django >= 3.2